--- a/app/views/main.html
+++ b/app/views/main.html
@@ -6,7 +6,7 @@
 </div>
 
 <div>
-  <a href="http://eepurl.com/QddJv" class="btn btn-primary btn-lg active btn-block" role="button">Can't wait!</a>
+  <a href="http://eepurl.com/QddJv" class="btn btn-primary btn-lg active" role="button">Can't wait!</a>
 </div>
 
 <div>
