--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <h3 class="text-muted">Tachikoma.io</h3>
+  <h3 class="text-muted"><a href="#">Tachikoma.io</a></h3>
 </div>
 <div>
   Do you want to keep an application updated?
