--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,5 +14,5 @@
 </div>
 
 <div class="footer">
-  <p>♥ from the Tachikoma.io team</p>
+  <p>♥ from the Tachikoma.io <a href="/#/team">team</a></p>
 </div>
