Add founder profile

--- a/app/views/team.html
+++ b/app/views/team.html
@@ -2,7 +2,18 @@
   <h3 class="text-muted"><a href="#">Tachikoma.io</a></h3>
 </div>
 
-  Team
+  <h4>Meet the Tachikoma.io Team</h4>
+
+  <p>
+    Kenichi "Sanemat" Murahashi<br />
+    Founder
+
+    <ul>
+      <li>sanemat@tachikoma.io</li>
+      <li>https://github.com/sanemat</li>
+      <li>https://twitter.com/sanemat</li>
+    </ul>
+  </p>
 
 <div class="footer">
   <p>♥ from the Tachikoma.io <a href="/#/team">team</a></p>
