Use angular rule route

--- a/app/views/team.html
+++ b/app/views/team.html
@@ -1,5 +1,5 @@
 <div class="header">
-  <h3 class="text-muted"><a href="#">Tachikoma.io</a></h3>
+  <h3 class="text-muted"><a href="#/">Tachikoma.io</a></h3>
 </div>
 
   <h4>Meet the Tachikoma.io Team</h4>
@@ -16,5 +16,5 @@
   </p>
 
 <div class="footer">
-  <p>♥ from the Tachikoma.io <a href="/#/team">team</a></p>
+  <p>♥ from the Tachikoma.io <a href="#/team">team</a></p>
 </div>
