--- a/app/views/main.html
+++ b/app/views/main.html
@@ -2,11 +2,11 @@
   <h3 class="text-muted"><a href="#/">Tachikoma.io</a></h3>
 </div>
 <div>
-  Do you want to keep an application updated?
+  Do you want to keep an application updated? Tachikoma.io solves your problem!
 </div>
 
 <div>
-  <a href="http://eepurl.com/QddJv" class="btn btn-primary btn-lg active" role="button">Can't wait!</a>
+  <a href="http://eepurl.com/QddJv" class="btn btn-primary btn-lg active" role="button">Join wait queue right now!</a>
 </div>
 
 <div>
