Remove trailing slash

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -15,7 +15,7 @@
 
 <div>
   <ul ng-social-buttons
-      data-url="'http://tachikoma.io/'"
+      data-url="'http://tachikoma.io'"
       data-title="'Tachikoma.io: Keep your application updated'"
       data-description="'Do you want to use your application long term? A recurring update dependencies helps you. Tachikoma.io solves your problem!'"
       data-image="'https://f.cloud.github.com/assets/75448/2427127/af1ab0be-abd6-11e3-8345-03ff61d20ec0.png'">
