--- a/app/views/team.html
+++ b/app/views/team.html
@@ -10,8 +10,8 @@
 
     <ul>
       <li>sanemat@tachikoma.io</li>
-      <li>https://github.com/sanemat</li>
-      <li>https://twitter.com/sanemat</li>
+      <li><a href="https://github.com/sanemat">https://github.com/sanemat</a></li>
+      <li><a href="https://twitter.com/sanemat">https://twitter.com/sanemat</a></li>
     </ul>
   </p>
 
